# Ondex

./: .env.example  .gitignore  AGENTS.md  README.md  contracts.json  ondex-splash-demo.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json  vercel.json
.github/workflows/: contracts.yml
apps/api/: package.json  prisma.config.ts  start.sh  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/src/: app.ts  config.ts  db.ts  env.ts  index.ts  indexer.ts  routes.ts
apps/api/tests/: setup.ts
apps/web/: middleware.ts  next-env.d.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/e2e/: auth-flow.spec.ts  error-handling.spec.ts  investor-dashboard.spec.ts  jury-dashboard.spec.ts  landing.spec.ts  login.spec.ts  startup-dashboard.spec.ts
apps/web/public/: site.webmanifest
contracts/: Cargo.toml
contracts/escrow_contract/: Cargo.toml  README.md
contracts/escrow_contract/src/: lib.rs  test.rs
contracts/identity_registry/: Cargo.toml  README.md
contracts/identity_registry/src/: lib.rs  test.rs
contracts/jury_registry/: Cargo.toml  README.md
contracts/jury_registry/src/: lib.rs  test.rs
docs/: THREAT_MODEL.md  session-lifecycle.md  tasks.md
scripts/: deploy-platform-token.ts  deploy.mjs  deploy.ts  fund-testnet-account.ts  generate-bindings.mjs  register-juror.ts  setup-ai-agent.ts
(+205 files in other folders)
