[workspace]
resolver = "2"
members = [
  "escrow_contract",
  "jury_registry",
  "identity_registry",
]

[workspace.dependencies]
soroban-sdk = "27.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
